--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,10 @@ buildscript {
             url "https://plugins.gradle.org/m2/"
         }
     }
-    dependencies {
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.1"
-    }
+}
+
+plugins {
+    id "com.jfrog.artifactory" version "4.7.5"
 }
 
 apply plugin: 'java'
@@ -33,9 +34,9 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 // Maven Artefacts Info
-group = "org.yggard"
+group = "net.voxelindustry"
 archivesBaseName = "hermod"
-version = "0.1.2"
+version = "1.0.0"
 
 dependencies {
 	testCompile "junit:junit:4.12"
@@ -50,7 +51,7 @@ artifactory {
     contextUrl = "${artifactory_contextUrl}"
     publish {
         repository {
-            repoKey = 'yggard'
+            repoKey = 'voxelindustry'
             username = "${artifactory_user}"
             password = "${artifactory_password}"
             maven = true
