Update and tidy buildscript

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
-artifactory_contextUrl=http://maven.ferenyr.info/artifactory
+artifactory_contextUrl=https://maven.ferenyr.info/artifactory
 artifactory_user=DummyUser
 artifactory_password=CompletlyInvalidPassword
+# Version
+hermod_version=2.0.0
