--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,20 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven {
-            url 'http://maven.ferenyr.info/artifactory/plugins-release'
-            credentials {
-                username = "${artifactory_user}"
-                password = "${artifactory_password}"
-            }
-        }
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-}
-
 plugins {
-    id "com.jfrog.artifactory" version "4.7.5"
+    id 'java'
+    id "org.sonarqube" version "2.7"
+    id "com.jfrog.artifactory" version "4.15.2"
 }
 
-apply plugin: 'java'
-
-//IDE
-apply plugin: 'eclipse'
-apply plugin: 'idea'
+apply plugin: 'java-library'
+apply plugin: "maven-publish"
+apply plugin: "com.jfrog.artifactory"
 
 repositories {
-    jcenter()
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven {
+        name = 'voxelindustry'
+        url = 'https://maven.ferenyr.info/artifactory/libs-release'
+    }
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -36,17 +24,13 @@ targetCompatibility = 1.8
 // Maven Artefacts Info
 group = "net.voxelindustry"
 archivesBaseName = "hermod"
-version = "2.0.0"
+version = project.hermod_version
 
 dependencies {
 	testCompile "junit:junit:4.12"
 }
 
 // Publications
-
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.artifactory'
-
 artifactory {
     contextUrl = "${artifactory_contextUrl}"
     publish {
